# scripts-store

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_services.sh  supervisord.conf
scripts-store/weather-python/weather/: main.py  pyproject.toml
scripts-store/weather-python/weather/config/: config.yaml
scripts-store/weather-python/weather/tests/: test_weather.py
src/: main.py
src/database/: db.py
src/service/: router.py
src/service/models/: db_model.py  register_model.py  schemas.py
src/static/: executor.py  package_manager.py  scheduler.py
src/utils/: logger_config.py  validator.py
