# pyproject.toml
[tool.poetry]
name = "caf-01-scripts"
version = "0.1.0"
description = "Script Store and Scheduler Service"
authors = ["Pranove Basavarajappa <pranove.ab@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
python-multipart = "^0.0.6"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
croniter = "^2.0.1"
python-dotenv = "^1.0.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"