[tool.poetry]
name = "weather-python"
version = "0.1.0"
description = "Weather tracking application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
requests = "^2.31.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"